log
ju.,  7 de abr. de 2022 12:37:43: 
 tests:  0|6
total_score: 0/70
10c1b69
ju.,  7 de abr. de 2022 12:42:04: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
5ee7ba5
ju.,  7 de abr. de 2022 12:44:57: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7c29ed8
ju.,  7 de abr. de 2022 12:51:49: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6806987
ju.,  7 de abr. de 2022 13:18:40: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:42: error: invalid operands to binary - (have 'Pair * {aka struct Pair *}' and 'char *')
         if(is_equal(key,map->buckets[idx]-key) == 1)return;
                         ~~~~~~~~~~~~~~~~~^
hashmap.c:51:9: error: expected ';' before 'map'
         map->buckets[idx]->value = value
         ^~~
hashmap.c:54:5: error: expected ';' before 'map'
     map->size += 1;
     ^~~
Compilation failed
41aa668
ju.,  7 de abr. de 2022 13:19:25: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:54:5: error: expected ';' before 'map'
     map->size += 1;
     ^~~
Compilation failed
4e9fccc
ju.,  7 de abr. de 2022 13:19:38: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
f853ab6
do., 10 de abr. de 2022 21:33:35: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
4b4156b
do., 10 de abr. de 2022 21:36:09: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3671ccf
do., 10 de abr. de 2022 21:39:03: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
2e95c52
do., 10 de abr. de 2022 21:49:06: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
5c370da
do., 10 de abr. de 2022 21:51:28: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
82ad463
do., 10 de abr. de 2022 21:52:34: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
be59194
do., 10 de abr. de 2022 21:54:38: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
5f29da4
do., 10 de abr. de 2022 21:55:35: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:76:45: error: 'return' with a value, in function returning void [-Werror]
         if(map->buckets[idx] == NULL)return NULL;
                                             ^~~~
hashmap.c:73:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e2221d1
do., 10 de abr. de 2022 21:55:50: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:76:45: error: 'return' with a value, in function returning void [-Werror]
         if(map->buckets[idx] == NULL)return NULL;
                                             ^~~~
hashmap.c:73:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c: In function 'searchMap':
hashmap.c:87:38: error: 'return' with no value, in function returning non-void [-Werror]
         if(map->buckets[idx] == NULL)return;
                                      ^~~~~~
hashmap.c:84:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key) {
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5bab340
do., 10 de abr. de 2022 21:56:21: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
34361c6
do., 10 de abr. de 2022 22:02:55: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
32df657
do., 10 de abr. de 2022 22:05:19: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
d08c870
do., 10 de abr. de 2022 22:06:08: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
2cd9704
do., 10 de abr. de 2022 22:37:56: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:63:22: error: 'idx' undeclared (first use in this function)
     while(oldBuckets[idx] != NULL){
                      ^~~
hashmap.c:63:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:12: error: variable 'oldBuckets' set but not used [-Werror=unused-but-set-variable]
     Pair **oldBuckets = map->buckets;
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6d4300b
do., 10 de abr. de 2022 22:45:37: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
2981ab5
do., 10 de abr. de 2022 22:47:43: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:65:37: error: 'old_buckets' undeclared (first use in this function)
         if (map->buckets != NULL && old_buckets[idx] != NULL){
                                     ^~~~~~~~~~~
hashmap.c:65:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
540fee5
do., 10 de abr. de 2022 22:48:07: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
898562f
do., 10 de abr. de 2022 22:53:46: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:63:5: error: expected ';' before 'newMap'
     newMap = createMap(bigC);
     ^~~~~~
hashmap.c:61:10: error: unused variable 'bigC' [-Werror=unused-variable]
     long bigC = map->capacity * 2;
          ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b91094f
do., 10 de abr. de 2022 22:54:04: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
acd39e9
do., 10 de abr. de 2022 22:55:08: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function 'enlarge':
hashmap.c:66:19: error: 'newMap' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         if (newMap->buckets != NULL && oldBuckets[idx] != NULL){
             ~~~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e0e7c6e
do., 10 de abr. de 2022 22:59:22: 
 hashmap.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  11|2
total_score: 50/70
30bdc01
do., 10 de abr. de 2022 23:01:24: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
7186e38
do., 10 de abr. de 2022 23:02:08: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|2
total_score: 50/70
72ead64
do., 10 de abr. de 2022 23:03:31: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
55c3681
do., 10 de abr. de 2022 23:07:03: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  11|2
total_score: 50/70
661734f
do., 10 de abr. de 2022 23:11:14: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
ae17942
do., 10 de abr. de 2022 23:26:59: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
2c4beb6
do., 10 de abr. de 2022 23:28:04: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
aca3a97
do., 10 de abr. de 2022 23:40:53: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
e529bbf
do., 10 de abr. de 2022 23:41:22: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  11|2
total_score: 50/70
f776790
do., 10 de abr. de 2022 23:45:33: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
54c137b
do., 10 de abr. de 2022 23:47:24: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
02c08ce
